compiler-core/src/parse/snapshots/gleam_core__parse__tests__unknown_external_target.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(erl, \"one\", \"two\")\npub fn one(x: Int) -> Int {\n  todo\n}"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @external(erl, "one", "two")
  │ ^^^^^^^^^ I don't recognise this target

Try `erlang`, `javascript`.
